[project]
name = "validation"
version = "2025.0.0"
requires-python = ">= 3.12, < 3.14"
dependencies = [
    "galois==0.4.7",
    "h5py==3.15.1",
    "llvmlite==0.45.1",
    "numba==0.62.1",
    "numpy==2.3.4",
]
[project.optional-dependencies]
EXTRAS = ["termcolor==3.2.0"]
[project.scripts]
generate = "attack_validation.testing.tests:main"
decrypt = "attack_validation.decrypt.decrypt:main"
codebreak = "attack_validation.codebreak.codebreak:main"