[project]
authors = [
  {name = "Ethan Hopkins"},
  {name = "Isaac Hair"},
]
name = "validator"
version = "2025.0.0"
requires-python = ">= 3.12, < 3.14"
dependencies = [
    "galois==0.4.7",
    "h5py==3.15.1",
    "llvmlite==0.45.1",
    "numpy==2.3.4",
    "tqdm==4.67.1",
    "matplotlib==3.10.8",
    "scipy==1.16.3",
    "threadpoolctl==3.6.0",
    "scipy==1.16.3",
    "scikit-learn==1.8.0",

]
[project.scripts]
evaluate = "validator.evaluations.evaluate:main"
decrypt = "validator.primitives.decrypt:main"
attack = "validator.attacks.attack:main"