[package]
name = "retrieve_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "retrieve_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
rand = "0.10.0"
rayon = "1.11.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
target-cpu = "native"